--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@ layout: default
             </h1>
             <div class="info">
               <p>
-                {{ post.date | date: '%B %d, %Y' }}
+                {% for tag in post.tags %}
+                  <span class="tag">{{ tag }}</span>
+                {% endfor %}
+                - {{ post.date | date: '%B %d, %Y' }}
               </p>
             </div>
             <p class="summary">
