--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
       <div class="row">
         {% for post in site.posts offset:1 %}
           {% if post.cover %}
-          <div class="col-xs-12 col-md-6">
+          <div class="col-xs-12 col-sm-6">
             {% include article_home.html trucate="90" %}
           </div>
           {% endif %}
