--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@ layout: default
           </div>
         {% endfor %}
       </div>
+      <div class="row">
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Adaptable -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8943241156434100"
+     data-ad-slot="2504630072"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+      </div>
     </div>
     {% include right.html %}
   </div>
