--- a/index.html
+++ b/index.html
@@ -5,19 +5,17 @@ layout: default
   <div class="row">
     <div class="col-xs-12 col-md-9">
       <div class="row">
-        <div class="col-xs-12">
-          <section class="cover">
-            {% assign post = site.posts.first %}
-            {% assign content = post.content %}
-            {% include article_home.html trucate="200" %}
-          </section>
-        </div>
-      </div>
-      <div class="row">
-        {% for post in site.posts offset:1 %}
+        {% for post in site.posts %}
+          {% unless post.draft %}
+          <!--<div class="col-xs-12">
+            <section class="cover">
+              {% include article_home.html trucate="200" %}
+            </section>
+          </div>-->
           <div class="col-xs-12 col-sm-6">
             {% include article_home.html trucate="85" %}
           </div>
+          {% endunless %}
         {% endfor %}
       </div>
     </div>
