:lipstick: styles blog

--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@ title: Home
 {% include home/header.html %}
 {% include home/video.html %}
 {% include home/topics.html %}
-{% include home/banner-course.html %}
+{% include general/banner-course.html %}
 {% include home/posts.html %}
+{% include home/slack.html %}
