:beers: dynamic video and include topics

--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@ title: Home
 {% include home/header.html %}
 {% include home/posts.html %}
 {% include general/banner-course.html %}
+{% include home/topics.html %}
 {% include home/slack.html %}
