--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@ layout: default
 title: Home
 ---
 {% include home/header.html %}
-{% include home/topics.html %}
-{% include general/banner-course.html %}
 {% include home/posts.html %}
+{% include general/banner-course.html %}
+{% include home/topics.html %}
+{% include general/banner-course2.html %}
 {% include home/slack.html %}
