--- a/index.html
+++ b/index.html
@@ -8,3 +8,4 @@ title: Home
 {% include home/topics.html %}
 {% include general/banner-course2.html %}
 {% include home/posts.html %}
+{% include general/banner-course3.html %}
